Update shortcodes for (sub)title plus minor fixes
changes
* have buttons in cookie notification in their ownl row

fixes
* missing space after `resources.Get`
* missing space after `$.Param`
* one space too much when referencing js/invi.js
* incorrect template for cookie notification beneath video
* colors were not inherited (import order was wrong)
* wrong import path for "core" styling
* example front matter property name "tiles" -> "cards"
* minor js / jquery syntax fixes

--- a/assets/invi/partials/_cookies.scss
+++ b/assets/invi/partials/_cookies.scss
@@ -7,7 +7,7 @@
 
 .cookie-btns {
     white-space: nowrap;
-    display: inline-block;
+    display: block;
     padding: 0 0;
 }
 
